--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+  <style>
+    input:focus {
+      box-shadow: none !important;
+    }
+  </style>
   <title>Temperature Converter</title>
 </head>
 
